[gd_scene load_steps=16 format=3 uid="uid://d0x0fhmsb17ts"]

[ext_resource type="Script" path="res://scenes/day_02/_shared/player/day_02_player.gd" id="1_18evh"]
[ext_resource type="Texture2D" uid="uid://bwdibri83ew7" path="res://art/day_2/day_02_player_0.png" id="2_v6tjh"]
[ext_resource type="Texture2D" uid="uid://c0ucesno6okvn" path="res://art/day_2/day_02_player_1.png" id="3_duspt"]
[ext_resource type="Texture2D" uid="uid://bq13ghd8wb778" path="res://art/day_2/day_02_player_2.png" id="4_qhk02"]
[ext_resource type="Texture2D" uid="uid://0aebmnupevda" path="res://art/day_2/day_02_player_3.png" id="5_gtf22"]
[ext_resource type="Texture2D" uid="uid://m8p8r7u77be3" path="res://art/day_2/day_02_player_dead_0.png" id="6_g8akr"]
[ext_resource type="Texture2D" uid="uid://beeb5wj7c116" path="res://art/day_2/day_02_player_dead_1.png" id="7_3um24"]
[ext_resource type="Texture2D" uid="uid://cy7nmbs6m7fnw" path="res://art/day_2/day_02_player_dead_2.png" id="8_xexw0"]
[ext_resource type="Texture2D" uid="uid://dhagu41okbryf" path="res://art/day_2/day_02_player_dead_3.png" id="9_x5a1f"]
[ext_resource type="Texture2D" uid="uid://dk2ygbgaaf335" path="res://art/day_2/day_02_player_dead_4.png" id="10_c6ld5"]
[ext_resource type="Texture2D" uid="uid://ksol15gs7fuf" path="res://art/day_2/day_02_player_dead_5.png" id="11_hvjuf"]
[ext_resource type="Texture2D" uid="uid://bwlc0ekoyuk5w" path="res://art/day_2/day_02_player_dead_6.png" id="12_x8xgp"]
[ext_resource type="Texture2D" uid="uid://cplnfpknckkpc" path="res://art/day_2/day_02_player_dead_7.png" id="13_i46ro"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tdrqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v6tjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_duspt")
}, {
"duration": 1.0,
"texture": ExtResource("4_qhk02")
}, {
"duration": 1.0,
"texture": ExtResource("5_gtf22")
}],
"loop": true,
"name": &"default",
"speed": 12.5
}, {
"frames": [{
"duration": 3.0,
"texture": ExtResource("6_g8akr")
}, {
"duration": 3.0,
"texture": ExtResource("7_3um24")
}, {
"duration": 3.0,
"texture": ExtResource("8_xexw0")
}, {
"duration": 3.0,
"texture": ExtResource("9_x5a1f")
}, {
"duration": 3.0,
"texture": ExtResource("10_c6ld5")
}, {
"duration": 3.0,
"texture": ExtResource("11_hvjuf")
}, {
"duration": 3.0,
"texture": ExtResource("12_x8xgp")
}, {
"duration": 4.0,
"texture": ExtResource("13_i46ro")
}],
"loop": false,
"name": &"dying",
"speed": 12.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgo7d"]
size = Vector2(12, 10)

[node name="Day02Player" type="Node2D" groups=["players"]]
z_index = -2
position = Vector2(-24, -8)
script = ExtResource("1_18evh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tdrqc")
animation = &"dying"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_hgo7d")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
